ingress-echoserver.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: haproxy
  creationTimestamp: "2023-05-17T14:59:58Z"
  generation: 2
  name: echoserver
  namespace: default
  resourceVersion: "127031819"
  uid: 42d1ecdb-4b47-4ecb-a974-56119991b580
spec:
  rules:
  - host: echoserver.navida.dev
    http:
      paths:
      - backend:
          service:
            name: echoserver
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - echoserver.navida.dev
    secretName: navida.dev
status:
  loadBalancer:
    ingress:
    - {}
