ingress-httpbin.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    konghq.com/strip-path: "true"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"konghq.com/strip-path":"true"},"name":"httpbin","namespace":"default"},"spec":{"rules":[{"http":{"paths":[{"backend":{"service":{"name":"httpbin","port":{"number":80}}},"path":"/","pathType":"ImplementationSpecific"}]}}]}}
  creationTimestamp: "2024-07-13T15:29:43Z"
  generation: 2
  name: httpbin
  namespace: default
  resourceVersion: "3141"
  uid: 7422e12d-2a2d-4a0f-93bd-9a7f21a3b613
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: httpbin
            port:
              number: 80
        path: /httpbin
        pathType: ImplementationSpecific
status:
  loadBalancer: {}
